Added changes at application.properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 
 spring.application.name=drycodelibrirymanagement
 #Mongodb Connection. Need to include in near future
-spring.data.mongodb.uri=mongodb+srv://bridgettetambe:ASncKjfEppWR02po@cluster0.fmmd0sd.mongodb.net/drycodelibrirymanagement?retryWrites=true&w=majority
+#spring.data.mongodb.uri=mongodb+srv://sam:sam@cluster0.rgwt0.mongodb.net/drycodelibrirymanagement?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://bridgettetambe:f9IWLEBtE7sgYRq2@cluster0.jrzvbpa.mongodb.net/drycodelibrirymanagement
 spring.data.mongodb.auto-index-creation=true
 spring.data.mongodb.database=drycodelibrirymanagement
 
